# Decentralized-Identity-System

./: .env.example  .gitignore  Cargo.toml  DISCLAIMER.md  README.md
config/: config.toml
contracts/src/: CredentialRegistry.sol  DIDRegistry.sol  Paymaster.sol
contracts/test/: DIDRegistry.t.sol
scripts/: sync_abis.py
src/: main.rs
src/blockchain/: mod.rs  zksync_client.rs
src/contracts/: credential_registry.rs  did_registry.rs  mod.rs
src/models/: credential.rs  did.rs  mod.rs
src/services/: api_server.rs  credential_issuer.rs  mod.rs  verifier.rs
src/services/abi/: CredentialRegistry.json  DIDRegistry.json  Paymaster.json
src/storage/: ipfs_client.rs
src/utils/: crypto.rs  serialization.rs
src/wallet/: credential_storage.rs  key_management.rs  mod.rs  zkp_generation.rs
src/zkp/: proof_generation.rs  proof_verification.rs
